--- a/my-react-app/src/App.module.css
+++ b/my-react-app/src/App.module.css
@@ -2,8 +2,13 @@
     font-family: "DM Sans", sans-serif;
     background-color: #f8f8f8;
     min-height: 100vh;
+    margin-top: 70px;
+    
   }
   
+  .Main {
+    padding-top: 81px;
+  }
   * {
     box-sizing: border-box;
   }
